--- a/www/game.html
+++ b/www/game.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="game.css">
     <title>FFVII</title>
 </head>
 <body>
-    <main>
-        <form>
-            <input type="button" value="Attack" id="attack">
-            <input type="button" value="Skill" id="skill">
-            <input type="button" value="Item" id="item">
+    <section>
+        <div class="menu container-row container-perso">
+            <img class="perso2" src="/assets/sprites/unit_ills_207001005.png" alt="">
+            <img class="perso1" src="/assets/sprites/unit_ills_207000105.png" alt="">
+        </div>
+        <main class="menu">
+            <form>
+                <input type="button" value="Attack" id="attack">
+                <input type="button" value="Skill" id="skill">
+                <input type="button" value="Block" id="block">
+                <input type="button" value="Item" id="item">
+            </form>
+        </main>
 
-        </form>
-    </main>
-
-
+    </section>
     <script src="perso.js"></script>
     <script src="game.js"></script>
 </body>
