--- a/www/game.html
+++ b/www/game.html
@@ -24,6 +24,7 @@
 
     </section>
     <script src="perso.js"></script>
+    <script src="skills.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
