--- a/www/game.html
+++ b/www/game.html
@@ -10,11 +10,17 @@
 <body>
     <section>
         <div class="menu container-row container-perso">
-            <img class="perso2" src="/assets/sprites/unit_ills_207001005.png" alt="">
-            <img class="perso1" src="/assets/sprites/unit_ills_207000105.png" alt="">
+            <div class="perso2">
+
+            </div>
+            <div class="perso1">
+
+            </div>
+            <!--<img class="perso2" src="/assets/sprites/unit_ills_207001005.png" alt="">--> 
+            <!--<img class="perso1" src="/assets/sprites/unit_ills_207000105.png" alt=""> -->
         </div>
         <main class="menu">
-            <form>
+            <form class="container-row">
                 <input type="button" value="Attack" id="attack">
                 <input type="button" value="Skill" id="skill">
                 <input type="button" value="Block" id="block">
