--- a/www/game.html
+++ b/www/game.html
@@ -10,6 +10,8 @@
 <body>
     <section>
         <div class="menu container-row container-perso">
+            <div class="barpv1"></div>
+            <div class="barpv2"></div>
             <div class="perso2">
 
             </div>
@@ -19,7 +21,7 @@
             <!--<img class="perso2" src="/assets/sprites/unit_ills_207001005.png" alt="">--> 
             <!--<img class="perso1" src="/assets/sprites/unit_ills_207000105.png" alt=""> -->
         </div>
-        <main class="menu">
+        <main class="menu container-row">
             <form class="container-row">
                 <input type="button" value="Attack" id="attack">
                 <input type="button" value="Skill" id="skill">
@@ -27,6 +29,12 @@
                 <input type="button" value="Item" id="item">
             </form>
         </main>
+        <ul class=" menu skill-list">
+            <li><input type="button" value="Skill1" id="skill1"></li>
+            <li><input type="button" value="Skill2" id="skill2"></li>
+            <li><input type="button" value="Skill3" id="skill3"></li>
+            <li><input type="button" value="Skill4" id="skill4"></li>
+        </ul>
 
     </section>
     <script src="perso.js"></script>
