debug function skills.

--- a/www/game.html
+++ b/www/game.html
@@ -16,13 +16,13 @@
                         <div class="barpv1">
         
                         </div>
-                        <p class="barpv1text"></p>
+                        <p id="barpv1text"></p>
                     </div>
                     <div class=" barcontainer2">
                         <div class="barpv2">
                     
                         </div>
-                        <p class="barpv2text"></p>
+                        <p id="barpv2text"></p>
                     </div>
            </div>
             <div class="container-row container-perso">
