--- a/www/game.html
+++ b/www/game.html
@@ -53,5 +53,6 @@
     <script src="perso.js"></script>
     <script src="skills.js"></script>
     <script src="game.js"></script>
+    <audio src="assets/final-fantasy-vii-last-stand.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
