--- a/www/game.html
+++ b/www/game.html
@@ -53,6 +53,6 @@
     <script src="perso.js"></script>
     <script src="skills.js"></script>
     <script src="game.js"></script>
-    <audio src="assets/final-fantasy-vii-last-stand.mp3" type="audio/mpeg" controls autoplay></audio>
+    <audio src="assets/final-fantasy-vii-last-stand.mp3" type="audio/mpeg" controls autoplay loop></audio>
 </body>
 </html>
