--- a/www/game.html
+++ b/www/game.html
@@ -63,6 +63,12 @@
                 <li><input type="button" value="Skill3" id="skill3"></li>
                 <li><input type="button" value="Skill4" id="skill4"></li>
             </ul>
+            <ul class=" menu item-list">
+                <li><input type="button" value="item1" id="item1"></li>
+                <li><input type="button" value="item2" id="item2"></li>
+                <li><input type="button" value="item3" id="item3"></li>
+                <li><input type="button" value="item4" id="item4"></li>
+            </ul>
             
         </main>
         
