--- a/www/game2.html
+++ b/www/game2.html
@@ -54,6 +54,7 @@
             <form class="container-row">
                 <input type="button" value="Attack" id="attack">
                 <input type="button" value="Skill" id="skill">
+                <input type="button" value="Invocation" id="invocation">
                 <input type="button" value="Block" id="block">
                 <input type="button" value="Item" id="item">
             </form>
