add actions on ia

--- a/www/game2.html
+++ b/www/game2.html
@@ -78,7 +78,7 @@
     <script src="persorev.js"></script> 
     <script src="Cloud.js"></script>
     <script src="Sephiroth.js"></script>
-    <script src="perso2.js"></script>
+    <script src="gamescript.js"></script>
     <audio id="audio" src="assets/final-fantasy-vii-last-stand2.mp3" type="audio/mpeg" controls loop></audio>
 </body>
 </html>
