--- a/www/game.html
+++ b/www/game.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="game.css">
     <title>FFVII</title>
 </head>
-
 <body>
     <section class="container-column ">
         <div class="menu container-column container-game">
@@ -96,7 +95,7 @@
             </ul>
 
         </main>
-        <textarea class="menu" id="log"></textarea>
+        <div class="menu" id="log"></div>
 
     </section>
     
