add overflow lifebar

--- a/www/game.html
+++ b/www/game.html
@@ -9,6 +9,7 @@
     <title>FFVII</title>
 </head>
 <body>
+    <img src="" alt="" srcset="">
     <section class="container-column ">
         <div class="menu container-column container-game">
             <div class="container-row container-barres">
