--- a/www/gameOOP.html
+++ b/www/gameOOP.html
@@ -106,7 +106,9 @@
     <script src="persorev.js"></script>
     <script src="Cloud.js"></script>
     <script src="Sephiroth.js"></script>
-    <script src="gamescript.js"></script>
+    <script src="gameview.js"></script>
+    <script src="gamecontroler.js"></script>
+    <script src="app.js"></script>
     <!-- <audio id="audio" src="assets/final-fantasy-vii-last-stand2.mp3" type="audio/mpeg" controls loop></audio> -->
 </body>
 
