--- a/www/game.html
+++ b/www/game.html
@@ -107,7 +107,7 @@
 
     
     <script src="skill.js"></script>
-    <script src="persorev.js"></script>
+    <script src="perso-model.js"></script>
     <script src="Cloud.js"></script>
     <script src="Sephiroth.js"></script>
     <script src="gamescript.js"></script>
