--- a/www/gameOOP.html
+++ b/www/gameOOP.html
@@ -108,7 +108,7 @@
     <script src="Sephiroth.js"></script>
     <script src="gameview.js"></script>
     <script src="gamecontroler.js"></script>
-    <script src="app.js"></script>
+    <script src="appgame.js"></script>
     <!-- <audio id="audio" src="assets/final-fantasy-vii-last-stand2.mp3" type="audio/mpeg" controls loop></audio> -->
 </body>
 
