--- a/www/gameOOP.html
+++ b/www/gameOOP.html
@@ -103,7 +103,7 @@
     </section>
     
     <script src="skill.js"></script>
-    <script src="persorev.js"></script>
+    <script src="perso-model.js"></script>
     <script src="Cloud.js"></script>
     <script src="Sephiroth.js"></script>
     <script src="gameview.js"></script>
